--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 h1{
-    width: 94%;
+   width: 94%;
     padding-top: 17px;
     padding-left: 3%;
     font-size: 24px;
@@ -45,9 +45,18 @@ a{
     color: #24738e;
 }
 
+table, tr, th, td {
+    border: 1px solid #cccccc;
+}
+
 table{
     width: 100%;
     table-layout: fixed;
+}
+
+th {
+    width: 26%;
+    padding: 10px 2%;
 }
 
 td {
@@ -55,7 +64,7 @@ td {
     padding: 10px 2%;
 }
 
-botton{
+button{
     font-size: 14px;
     padding: 5px 10px;
 }
@@ -103,4 +112,32 @@ tr.row0 {
 
 select {
     height: 30px;
+}
+
+#header_menu {
+    width: 57%;
+    padding-top: 17px;
+    padding-left: 3%;
+    display: inline-block;
+}
+
+#employee_name {
+    color: #cccccc;
+    width: 36%;
+    padding-right: 3%;
+    text-align: right;
+    display: inline-block;
+}
+
+#header a {
+    color: #eeeeee;
+}
+
+h1 a {
+    color: #eeeeee;
+}
+
+h1 {
+    font-size: 24px;
+    display: inline;
 }
