ご意見・ご要望報告画面で登録した内容が、ご意見・ご要望一覧画面の表の中に表示されない。

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -170,3 +170,26 @@ pre{
 h3 {
     font-size: larger;
 }
+
+
+
+table#opinion_list th{
+    font-weight:hold;
+    padding: 10px 2%;
+}
+
+table#opinion_list .opinion_name{
+    width: 20%;
+    padding: 10px 2%;
+}
+table#opinion_list .opinion_date{
+    width: 20%;
+}
+
+table#opinion_list .opinion_overview{
+    width: 37%;
+}
+
+table#opinion_list .opinion_action{
+    width: 13%;
+}
