--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -165,6 +165,7 @@ table#report_list .report_action {
 
 pre{
     font-family: "Hiragino Kaku Gothic Pro",Meiryo,"MS PGothic",Helvetica,Arial,sans-serif;
+    white-space: pre-wrap;
 }
 
 h3 {
