トップページにコメント一覧機能を実装、コメント一覧ページのCSS調整、各クラスをブラッシュアップ

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -194,3 +194,12 @@ table#opinion_list .opinion_overview{
 table#opinion_list .opinion_action{
     width: 13%;
 }
+table#comment_list .comment_content{
+    width:40%;
+}
+table#comment_list .comment_width{
+    width:90%;
+    overflow:hidden;
+    white-space: nowrap;
+    text-overflow:ellipsis;
+}
